--- a/FaceGenderRec/FaceGenderRec.vcxproj
+++ b/FaceGenderRec/FaceGenderRec.vcxproj
@@ -76,7 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="demo.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="detectObject.cpp" />
     <ClCompile Include="ImageUtils_0.7.cpp" />
     <ClCompile Include="preprocessFace.cpp" />
